# xmltoc

./: CMakeLists.txt  README.md  Todo.md  structureUnderstanding.txt  xmlGrammar.txt
src/: CodeGenerator.cpp  CodeGenerator.hpp  Lexer.cpp  Lexer.hpp  Parser.cpp  Parser.hpp  XMLToC.hpp  main.cpp  utils.hpp
tests/: easy.xml  example.xml
